results/SVCOMP/2-shot/log-assert6-2024_03_18_23_16_33.txt
import java.util.Random;

class assert6 {
    //@ ensures \nothing;
    public static void func() {
        int i = new Random().nextInt();

        if (i >= 1000) {
            if (!(i >= 1000)) {
                assert false;
            }
        }
    }
}
/home/max/Documents/JMLGPT/tmp/assert6.java:4: error: incompatible types: <none> cannot be converted to boolean
    //@ ensures \nothing;
                ^
1 error

